--- a/scss/style.scss
+++ b/scss/style.scss
@@ -246,7 +246,7 @@ body {
   }
 }
 footer {
-  background-color: #f0f0f0; /* Color de fondo gris claro */
+  background-color: #f0f0f0; 
   padding: 20px;
   text-align: center;
   p {
@@ -256,8 +256,8 @@ footer {
     display: flex;
     justify-content: center;
     img {
-      margin: 0 10px; /* Espacio entre los logos */
-      max-width: 30px; /* Tamaño máximo de los logos */
+      margin: 0 10px; 
+      max-width: 30px; 
     }
   }
 }
